Archive2/21/816a8f5124089c/output
main.cpp: In function ‘int dijkstra(std::queue<Node*>, int)’:
main.cpp:33:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
main.cpp: In function ‘int main()’:
main.cpp:39:24: warning: ISO C++ forbids variable length array ‘distances’ [-Wvla]
         int distances[i] = INFINITY;
                        ^
main.cpp:8:18: error: variable-sized object ‘distances’ may not be initialized
 #define INFINITY 99
                  ^
main.cpp:39:28: note: in expansion of macro ‘INFINITY’
         int distances[i] = INFINITY;
                            ^
main.cpp:40:25: warning: ISO C++ forbids variable length array ‘previous’ [-Wvla]
         Node* previous[i] = NULL;
                         ^
In file included from /usr/include/_G_config.h:15:0,
                 from /usr/include/libio.h:32,
                 from /usr/include/stdio.h:75,
                 from /usr/include/c++/4.8/cstdio:42,
                 from /usr/include/c++/4.8/ext/string_conversions.h:43,
                 from /usr/include/c++/4.8/bits/basic_string.h:2815,
                 from /usr/include/c++/4.8/string:52,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:1:
main.cpp:40:29: error: variable-sized object ‘previous’ may not be initialized
         Node* previous[i] = NULL;
                             ^
main.cpp:39:13: warning: unused variable ‘distances’ [-Wunused-variable]
         int distances[i] = INFINITY;
             ^
main.cpp:40:15: warning: unused variable ‘previous’ [-Wunused-variable]
         Node* previous[i] = NULL;
               ^
